<resources>
    <string name="app_name">Kitchen Blog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Comments Activity-->
    <string name="write_a_comment">Write a comment</string>
    <string name="send_comment">Send comment</string>
    <string name="comments_tag">Comments:</string>
    <string name="add_comment"> Write a comment…</string>
    <string name="loading_comment">Loading comment …</string>

    <!--User Activity-->
    <string name="user_view_image">User view image</string>
    <string name="about">About</string>
    <string name="photos">Photos</string>

    <!--Nav bar-->
    <string name="user_image_nav_bar">User image nav bar</string>
    <string name="user_name_nav_bar">Android Studio</string>
    <string name="user_email_nav_bar">android.studio@android.com</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>

    <!--Post item-->
    <string name="comments">Comments</string>
    <string name="post_image_desc">Post image</string>
    <string name="default_likes">0 Likes</string>
    <string name="default_comments">0 Comments</string>
    <string name="more_button_desc">More button</string>
    <string name="post_favorite_image_desc">Post favorite image</string>
    <string name="post_comments_image_desc">Post comments image</string>
    <string name="post_like_image_desc">Post like image</string>

    <!--Login/Register page-->
    <string name="welcome_to_photo_blog">Welcome To Kitchen \n Blog</string>
    <string name="your_email">Your email…</string>
    <string name="password">Password…</string>
    <string name="login_btn_title">LogIn</string>
    <string name="need_a_new_account">Need A New Account ?</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="register_btn_title">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>

    <!--Setup page-->
    <string name="save_account_settings">Save Account Settings</string>
    <string name="your_name">Your Name</string>
    <string name="setup_user_image">Setup image</string>

    <!--Add new post-->
    <string name="add_description">Add description</string>
    <string name="add_post">Add Post</string>
    <string name="post_image">Post image</string>

    <!--Navigation bar-->
    <string name="nav_home_title">Home</string>
    <string name="nav_my_favorite_posts">My Favorite Posts</string>
    <string name="nav_account_title">My Posts</string>
    <string name="search">Search</string>
    <string name="voice_search">Voice Search</string>
    <string name="default_user_name">User name</string>

    <!--Forgot Password-->
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="forgot_password_instruction">To reset password, enter your email, press the button and check mail to follow instruction</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back</string>

    <!--Post item activity-->
    <string name="post_item_image">Post item image</string>

    <!--Post actions-->
    <string name="delete_post_title">Delete Post</string>
    <string name="editpost_title">Edit Post</string>
    <string name="save_post">Save Post</string>

    <!--Search languages-->
    <string name="lang_arm_title">Հայերեն</string>
    <string name="lang_eng_title">English</string>
    <string name="lang_rus_title">Русский</string>

</resources>
