<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home_title" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@mipmap/ic_favourite_black"
            android:title="@string/nav_my_favorite_posts" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_account_title" />
        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/account_settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
